syntax = "proto3";
package gateway;
option go_package = "/github.com/kercylan98/minotaur/core/gateway";

enum MessageId {
  MI_Heartbeat = 0;
  MI_ServiceRegister = 1; // ServiceRegisterRequest => ServiceRegisterResponse
}

enum ServiceNetworkType {
  SNT_Invalid = 0;
  SNT_TCP = 1;
  SNT_UDP = 2;
  SNT_HTTP = 3;
  SNT_WebSocket = 4;
}

message ServiceInfo {
    string name = 1;
    string description = 2;
    string address = 3;
    ServiceNetworkType network_type = 4;
    uint32 weight = 5; // 0 ~ 100
}

message ServiceRegisterRequest {
    ServiceInfo service_info = 1;
}

message ServiceRegisterResponse {

}

message RequestWrapper {
  MessageId id = 1;
  bytes data = 2;
  int64 timestamp = 3;
  int64 server_receive_at = 4; // server use
}

message ResponseWrapper {
  MessageId id = 1;
  bytes data = 2;
  int64 client_send_at = 3;
  int64 server_receive_at = 4;
  int64 server_send_at = 5;
}
